--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+#MacOS
+.DS_Store
+
+#git
+.gitignore
+data/
+*.log
+logs/
+temp*/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
